# V-Engine

./: .gitignore  CMakeLists.txt  README.md  build_manual.bat  test_compile.bat  test_shader.cpp
libs/GLAD/include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: Camera.cpp  Camera.hpp  CameraEntity.hpp  Entity.cpp  Entity.hpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelEntity.hpp  ResourceManager.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UIManager.cpp  UIManager.hpp  algebra.hpp  glad.c  main.cpp
